Added noscript tag in index.html when js in disabled

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <noscript>Pls enable javascript for better experience</noscript>
   </body>
 </html>
